[package]
name = "valued-enums"
version = "1.0.0"
edition = "2021"

repository = "https://github.com/hack-wrench/valued-enums/"
homepage   = "https://github.com/hack-wrench/valued-enums/"
authors    = ["H-W <github.com/hack-wrench>"]
keywords   = ["enums", "python-like"]
readme     = "README.md"
license    = "The Unlicense"
