[package]
name = "valued-enums"
version = "1.0.1"
edition = "2021"

description = "Macros collection and specify trait for creating valued or python-like enums."

repository = "https://github.com/hack-wrench/valued-enums/"
homepage   = "https://github.com/hack-wrench/valued-enums/"
authors    = ["H-W <github.com/hack-wrench>"]
keywords   = ["enums", "python-like"]

readme     = "README.md"
license    = "Unlicense"
